src/test/deca/etape_A/valid/list_expr_arithmetiques.deca
// Description :
//   test de liste d'expressions ( utilisation de +, -, *, / et % )

// Résultats :
//   Ok

{
 int x = 3*5 + 2/(3%44) ;
}