src/test/deca/etape_A/invalid/primary_expr2.deca
// Description :
//   test de la règle du primary_expr

// Résultats :
//   Erreur syntaxique
//   Ligne 10 : mismatched input '}' expecting {'instanceof', ')', '=', '&&', '||', '==', '!=', '<=', '>=', '<', '>', '+', '-', '*', '/', '%', '.'}

{
( 2 || 3 
}